--- a/src/App.css
+++ b/src/App.css
@@ -55,24 +55,6 @@
   margin-top: 140px;
 }
 
-/* .Product-List mainCard li {
-  display: inline-block;
-  border: 1px solid skyblue;
-  padding: 5px;
-  width: 150px;
-} */
-
-.Product-List .mainCard {
-  text-align: left;
-  margin: 0;
-  display: flex;
-  border: 1px solid skyblue;
-  padding: 5px;
-  width: 100%;
-  flex-wrap: wrap;
-}
-
-
 .invalid-input {
   color: red;
   margin-top: -20px;
@@ -178,4 +160,48 @@
 
 .corouselImage{
   filter: brightness(30%);
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: skyblue;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: rgb(7, 165, 228);
+}
+
+.imageWidth{
+  width: 7%;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px;
+  border-top: 1px solid #ccc;
+}
+
+.cancel-button,
+.confirm-button {
+  padding: 8px 16px;
+  margin-left: 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.cancel-button {
+  background-color: #e0e0e0;
+}
+
+.confirm-button {
+  background-color: #007bff;
+  color: white;
 }
