--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 
 .nav-ul {
-  padding: 5px;
+  padding: 3px;
   margin: 0;
   background-color: skyblue;
 }
@@ -93,7 +93,7 @@
 }
 
 .logo {
-  width: 45px;
+  width: 70px;
   float: left;
   border-radius: 50%;
   margin-top: 3px;
@@ -205,3 +205,93 @@ input[type=file]::file-selector-button:hover {
   background-color: #007bff;
   color: white;
 }
+
+/* Basic container styling */
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 91vh;
+  width: 100%;
+  background-color: #f4f6f8;
+}
+
+.login-form {
+  background-color: white;
+  padding: 20px 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+}
+
+.login-title {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #3f51b5;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.input-label {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.custom-input {
+  margin-bottom: 20px;
+}
+
+.forgot-password {
+  display: block;
+  text-align: right;
+  color: #3f51b5;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.forgot-password:hover {
+  text-decoration: underline;
+}
+
+.login-button {
+  background-color: #3f51b5;
+  color: white;
+  font-weight: 600;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.login-button:hover {
+  background-color: #303f9f;
+}
+
+.signup-link {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.signup-link a {
+  color: #3f51b5;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
+
+/* Loader Styling */
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/* Make the page responsive */
+@media (max-width: 480px) {
+  .login-form {
+    padding: 20px;
+  }
+}
+
